--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                <li><a href="https://summerbreeze1.netlify.app/">ABOUT</a></li>
                <li><a href="https://summerbreeze4.netlify.app/">MENU</a></li>
                <li><a href="https://summerbreeze5.netlify.app/">SHOP</a></li>
-               <li><a href="">COMPANY</a></li>
+               <li><a href="https://summer6.netlify.app/">COMPANY</a></li>
             </ul>
         </nav>
 
