--- a/index.html
+++ b/index.html
@@ -74,14 +74,12 @@
      }
      #img1{
       position: relative;
-      margin: 0;
-      left: 300px;
-
+      margin-left: 500px;
      }
      #text{
       position: absolute;
       top: 100px;
-      left: 650px;
+      left: 450px;
       font-size: 15px;
       line-height: 30px;
       font-family: 'Nanum Gothic', sans-serif;
