--- a/index.html
+++ b/index.html
@@ -73,20 +73,19 @@
        float: left;
      }
      #img1{
-      /* position: relative; */
+      position: relative;
       margin-left: 500px;
      }
      #text{
       position: absolute;
-      top: 300px;
-      left: 950px;
+      top: 100px;
+      left: 450px;
       font-size: 15px;
       line-height: 30px;
       font-family: 'Nanum Gothic', sans-serif;
-s
+
 
      }
- 
  
     
  </style>
